# VepClin-MCP

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: exporter.py  llm_runner.py  mcp_server.py  requirements.txt  session_config.py  terminal_ui.py  test_server.py  variant_client.py
